--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
   background-color: red; }
 
 .boss {
-  background-color: #f4ff79; }
+  background-color: #171e2e; }
 
 .player {
   background-color: blue; }
