--- a/css/style.sass
+++ b/css/style.sass
@@ -1,3 +1,9 @@
+.title
+  text-align: center
+  font-size: 30px
+  margin-top: 30px
+  margin-bottom: 30px
+
 .empty
   width: 10px
   height: 10px
@@ -32,6 +38,20 @@
   @extend .empty
   background-color: #ae61ff
 
-#box
+.grid
+  display: table
+  margin: 0 auto
   width: 1000px
   height: 400px
+
+.message
+  text-align: center
+  font-size: 100px
+
+.info
+  float: left
+  margin-right: 20px
+
+.footer
+  margin-top: 20px
+  float: left
