--- a/css/style.css
+++ b/css/style.css
@@ -49,4 +49,7 @@
   margin-top: 20px;
   float: left; }
 
+.toggle {
+  background-color: black !important; }
+
 /*# sourceMappingURL=style.css.map */
