--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,17 @@
 
 .footer {
   margin-top: 20px;
+  margin-left: 30px;
   float: left; }
 
 .toggle {
   background-color: black !important; }
+
+.entities {
+  margin-left: 330px; }
+
+.header {
+  margin-left: 300px;
+  margin-bottom: 50px; }
 
 /*# sourceMappingURL=style.css.map */
