--- a/css/style.sass
+++ b/css/style.sass
@@ -54,6 +54,12 @@
 
 .footer
   margin-top: 20px
+  margin-left: 30px
   float: left
 .toggle
   background-color: black !important
+.entities
+  margin-left: 330px
+.header
+  margin-left: 300px
+  margin-bottom: 50px
